--- a/FlexibleDataApplication/appsettings.json
+++ b/FlexibleDataApplication/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LOCALHOST\\SQLEXPRESS;Database=FlexibleDataDatabase;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
